name: reactive-banana-glut-examples
version: 0.0.3
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
description: .
data-dir: ""
 
executable RBG-SimpleAnimation
    build-depends: GLUT >=2.3, OpenGL >=2.5, base >=3 && <5,
                   reactive-banana >=0.4.3, reactive-banana-glut -any
    main-is: SimpleAnimation.hs
    buildable: True
    hs-source-dirs: src
    other-modules: SimpleAnimation.State SimpleAnimation.Objects
 