name: reactive-banana-glut
version: 0.0.3
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description: .
data-dir: ""
 
library
    build-depends: GLUT >=2.3, StateVar -any, base >=3 && <5,
                   reactive-banana >=0.5
    exposed-modules: Reactive.Banana.GLUT Reactive.Banana.GLUT.Input
                     Reactive.Banana.GLUT.Util Reactive.Banana.GLUT.Window
    exposed: True
    buildable: True
    hs-source-dirs: src
 